# LaunchLens-Langgraph-Agent

./: .dockerignore  .env.example  .gitignore  README.md  RUBRIC.md  SUBMISSION_TEMPLATE.md  docker.yaml  pyproject.toml
backend/: Dockerfile  api.py  cache.py  cli.py  config.py  graph.py  tools.py
backend/clients/: __init__.py  constants.py  oxylabs.py  serp_api.py
docs/: architecture.drawio  index.html
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
graph_output/: graph.mmd
tests/: test_api.py  test_demand.py  test_graph.py  test_supply.py
video/: index.html  meta.json  package.json
